// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginControl with LoginButton component when isAuthenticationInfoValid returns falsy 1`] = `
<HeaderFlatButton
  label="Login"
  onClick={[Function]}
/>
`;

exports[`renders LoginControl with LogoutButton component when isAuthenticationInfoValid returns truthy 1`] = `
<HeaderFlatButton
  label="Logout"
  onClick={[Function]}
/>
`;
